--- a/index.html
+++ b/index.html
@@ -1,34 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins&family=Roboto:ital@1&family=Shizuru&display=swap');
-        </style>
+    </style>
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Practice SVG</title>
+    <title>Practice project</title>
 </head>
+
 <body>
 
-<nav class="navbar">
+    <nav class="navbar">
 
-    <ul class="navul">
-        <li><a href="">Home</a></li>
-        <li><a href="">Services</a></li>
-        <li><a href="">Blogs</a></li>
-        <li><a href="">About</a></li>
-    </ul>
-</nav>
+        <ul class="navul">
+            <li><a href="">Home</a></li>
+            <li><a href="">Services</a></li>
+            <li><a href="">Blogs</a></li>
+            <li><a href="">About</a></li>
+        </ul>
+    </nav>
 
-<!--section1-->
+    <!--section1-->
 
     <section class="section1">
+        <div class="box1">
+            <h1>Hey!</h1>
+            <p class="p1"><span class="pf">Welcome</span> To My Portfolio!</p>
+            <p class="p2">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur a rem ab reiciendis odio
+                enim totam sunt? Ducimus minima quidem ratione velit possimus illum ipsum eligendi odit. Blanditiis,
+                maxime animi!</p>
+        </div>
 
+
+
+        <div class="box1" id="img">
+            <h2 style="margin-top: 35px;"><span class="c">Contact</span> With Me ?</h2>
+          <div class="pera">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur a rem ab reiciendis odio enim totam sunt?</p>
+          </div>
+          <button>Connect</button>
+        </div>
 
     </section>
+    <!--section2-->
 
-    
+
 </body>
+
 </html>
