button aimation chancged

--- a/index.html
+++ b/index.html
@@ -35,18 +35,17 @@
                 maxime animi!</p>
         </div>
 
-
-
         <div class="box1" id="img">
             <h2 style="margin-top: 35px;"><span class="c">Contact</span> With Me ?</h2>
-          <div class="pera">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur a rem ab reiciendis odio enim totam sunt?</p>
-          </div>
-          <button>Connect</button>
+            <div class="pera">
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur a rem ab reiciendis odio enim
+                    totam sunt?</p>
+            </div>
+            <button>Connect</button>
         </div>
 
     </section>
-    <!--section2-->
+
 
 
 </body>
