--- a/index.html
+++ b/index.html
@@ -36,16 +36,63 @@
         </div>
 
         <div class="box1" id="img">
-            <h2 style="margin-top: 35px;"><span class="c">Contact</span> With Me ?</h2>
+            <h2 style="margin-top: 52px;"><span class="c">Contact</span> With Me ?</h2>
             <div class="pera">
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur a rem ab reiciendis odio enim
                     totam sunt?</p>
             </div>
-            <button>Connect</button>
+
+            <button><a target="blank" href="https://www.facebook.com/timutorikul">Connect</a></button>
         </div>
 
     </section>
 
+
+    <!--secton2-->
+
+    <section class="section2">
+        
+        <div class="services"> <p class="lorem">Our Services !!</p></div>
+
+       <div class="boxerbap">
+
+
+        <div class="box3" class="web">
+        
+            <img src="/img/coding.png" alt="">
+            <p class="webtittle">Web Development</p>
+            <p class="web-pera">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, ut! Harum omnis eos sunt sed ut fuga in mollitia id.
+            </p>
+            <button class="btn"><a href="#">Get Started</a></button>
+        </div>
+
+
+        <div class="box3" class="seo">
+
+            <img src="/img/seo.png" alt="">
+            <p class="webtittle">Seach Engine Optimizatin</p>
+            <p class="web-pera">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, ut! Harum omnis eos sunt sed ut fuga in mollitia id.
+            </p>
+            <button class="btn"><a href="#">Get Started</a></button>
+
+        </div>
+
+
+
+        <div class="box3" class="lead">
+            <img src="/img/generation.png" alt="">
+            <p class="webtittle">Lead Generation</p>
+            <p class="web-pera">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, ut! Harum omnis eos sunt sed ut fuga in mollitia id.
+            </p>
+            <button class="btn"><a href="#">Get Started</a></button>
+        </div>
+       </div>
+
+
+    </section>
 
 
 </body>
