--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
             <div class="box3" class="web">
 
-                <img src="/img/coding.png" alt="">
+                <img src="./img/coding.png" alt="">
                 <p class="webtittle">Web Development</p>
                 <p class="web-pera">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, ut! Harum omnis eos sunt sed ut
@@ -77,7 +77,7 @@
 
             <div class="box3" class="seo">
 
-                <img src="/img/seo.png" alt="">
+                <img src="./img/seo.png" alt="">
                 <p class="webtittle">Seach Engine Optimization</p>
                 <p class="web-pera">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, ut! Harum omnis eos sunt sed ut
@@ -90,7 +90,7 @@
 
 
             <div class="box3" class="lead">
-                <img src="/img/generation.png" alt="">
+                <img src="./img/generation.png" alt="">
                 <p class="webtittle">Lead Generation</p>
                 <p class="web-pera">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, ut! Harum omnis eos sunt sed ut
